# your-podcast

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  generate-commands.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  generate.py  generate_all.py  init_d1.py  litestream.yml  migrate.py  migrate_d1.py  pyproject.toml  railway.toml  seed.py  wrangler.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_rename_description_to_keywords.py  0003_add_daily_generation.py
backend/app/: auth.py  config.py  d1_database.py  database.py  main.py  models.py  schema.py  schemas.py  types.py
backend/app/db/: __init__.py  client.py  queries.py  tables.py
backend/app/routers/: auth.py  episodes.py  generate.py  onboarding.py  tasks.py
backend/app/services/: audio.py  cover.py  d1.py  gemini.py  local_sqlite.py  news.py  pipeline.py  podcast.py  rss.py  storage.py  tts.py
backend/app/services/llm/: __init__.py  base.py  gemini_adapter.py  prompts.py  zhipu_adapter.py
backend/config/: rss_sources.json
backend/migrations/: 0001_initial.sql
backend/tests/: conftest.py  test_auth.py  test_episodes.py  test_generate_all.py  test_generate_cli.py  test_generate_endpoint.py  test_health.py  test_migrate_d1.py  test_onboarding.py  test_pipeline.py  test_seed.py  test_services.py
doc/: architecture-decision.md  backend-deployment.md  frontend-coding-rules.md
docs/: api-contract.md  architecture-decision.md  backend-deployment.md  backend-implementation-plan.md  cicd-overview.md  (+2 more)
(+77 files in other folders)
